[package]
name = "mathelogos"
version = "0.1.1"
authors = ["ladroid"]
description = """
Library to make Rust as a functional programming language.
"""
repository = "https://github.com/ladroid/Mathelogos"
edition = "2021"
license = "Apache-2.0"
categories = ["no-std", "rust-patterns", "mathematics"]
keywords = ["macro", "parser", "no_std", "utility", "math"]
readme = "README.md"
exclude = ["target/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "src/lib.rs"

[[example]]
name = "test"
path = "examples/example.rs"
